# MooshieUI

./: .gitignore  GEMINI.md  LICENSE  README.md  RELEASE_NOTES.md  fix-drag.cjs  index.html  inject-snippet.cjs  inject-snippet2.cjs  inject-snippet3.cjs  inject-snippet4.cjs  inject-snippet5.cjs  inject-snippet6.cjs  inject-snippet7.cjs  inject-snippet8.cjs  inject-snippet9.cjs  inject-state.cjs  instructions.md  package-lock.json  package.json  test-drag-2.cjs  tsconfig.json  vite.config.ts
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.github/agents/: pre-commit-check.agent.md  workflow-template-builder.agent.md
.github/instructions/: svelte-components.instructions.md  svelte-stores.instructions.md  tauri-backend.instructions.md
.github/prompts/: add-generation-param.prompt.md  add-tauri-command.prompt.md  release.prompt.md
.github/workflows/: release.yml
comfyui-nodes/: Image Tiled Upscale (img2img).json  install.sh  nodes_tiled_diffusion.py
scripts/: SMOKE_TEST_RUNBOOK.md  requirements-smoke.txt  smoke_test.py
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  interrogator.rs  lib.rs  main.rs  metadata.rs  setup.rs  state.rs
src-tauri/src/comfyui/: client.rs  mod.rs  mooshie_nodes.py  nodes.rs  process.rs  types.rs  websocket.rs
src-tauri/src/commands/: api.rs  config.rs  interrogator.rs  mod.rs  server.rs  websocket.rs  workflow.rs
src-tauri/src/templates/: controlnet.rs  facefix.rs  img2img.rs  inpainting.rs  mod.rs  txt2img.rs  upscale.rs
src/lib/assets/: danbooru-tags.json
src/lib/config/: controlnet-presets.ts
src/lib/locales/: en.ts  es.ts
src/lib/stores/: accessibility.svelte.ts  autocomplete.svelte.ts  canvas.svelte.ts  canvasHistory.svelte.ts  connection.svelte.ts  downloads.svelte.ts  gallery.svelte.ts  generation.svelte.ts  locale.svelte.ts  models.svelte.ts  progress.svelte.ts
src/lib/types/: index.ts
src/lib/utils/: api.ts  lazyThumbnail.ts  (+2 more)
(+34 files in other folders)
